--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,10 @@
   :root {
     --background: 40 20% 97%;
     --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
+    /* --card: 0 0% 100%; */
+    --card: 48 33,3% 97,1%;
+    /* --card-foreground: 240 10% 3.9%; */
+    --card-foreground: 48 25% 92,2%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
     --primary: 240 5.9% 10%;
@@ -43,9 +45,9 @@
   .dark, [data-theme="dark"] {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
+    --card: 240 10% 5.9%;
     --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
+    --popover: 240 10% 5.9%;
     --popover-foreground: 0 0% 98%;
     --primary: 0 0% 98%;
     --primary-foreground: 240 5.9% 10%;
